--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -34,6 +34,8 @@
 .navbarmenuitem {
   cursor: pointer;
   transition: 0.3s;
+   color: white;
+  text-decoration: none;
 }
 
 .navbarmenuitem:hover {
@@ -41,7 +43,7 @@
   padding-bottom: 0.5rem;
   border-bottom: 2px solid yellow;
   font-size: 1.3rem;
-  color: #eee1e1ff;
+  color: #cfb4b4ff;
 }
 
 .navbarcontact {
@@ -77,8 +79,30 @@ background-color: #b19b9bff;
   color: black;
 }
 
-/* Mobile styles */
+
+
+
+
+.navbarmenu a {
+  color: white;
+  text-decoration: none; /* remove underline */
+}
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 840px) {
+
+   .navbarmenuitem:last-child {
+    margin-right: 1rem; 
+  }
   .navbar {
     flex-direction: row;
     justify-content: space-between;
@@ -91,43 +115,86 @@ background-color: #b19b9bff;
     height: 2.8rem;
     width: auto;
     margin: 0;
+    display: flex;
+    align-items: center; 
   }
 
   .navbarmenu {
     flex-direction: row;
-    gap: 0.8rem;
+    gap: 0.5rem;
     justify-content: center;
     align-items: center;
     flex: 1;
     width: auto;
+    margin-left: 1rem;
+
   }
 
   .navbarmenuitem {
     font-size: 0.8rem;
+    display: flex;
+    align-items: center; 
   }
 
   .navbarmenuitem:hover {
-    font-size: 0.8rem;
+   padding-bottom: 0.5rem;
+    border-bottom: 2px solid yellow;
+    font-size: 1rem; 
+    color: #cfb4b4ff;
   }
 
   .navbarcontact {
-    height: 35px;
-    padding: 4px 8px;
-    font-size: 0.7rem;
+     
+    border-radius: 6px;        
+    display: flex;
+    align-items: center;
+    justify-content: center;
+     height: 28px;              
+    width: 28px;
+     margin-left: 0.8rem;
+     display: flex;
+    align-items: center;
+    line-height: 1; 
+     vertical-align: middle;
   }
 
   .navbarcontactimg {
-    height: 0.8rem;
-    width: 0.8rem;
-    margin-right: 5px;
+    height: 16px;
+    width: 16px;
+      display: block;
+  }
+
+.navbarcontact span
+  {
+    display:none;
   }
 }
+ @media (max-width: 840px) {
+  nav.navbar a.navbarcontact {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    height: 32px !important;
+    width: 32px !important;
+    padding: 6px !important;
+    border-radius: 8px !important;
+    margin-left: 1rem !important;
+     margin-right: 1rem !important;
+    background: white !important;
+    line-height: 0 !important;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+       padding-left: 10px !important;
+      
+  }
 
-.navbarmenu a {
-  color: white;
-  text-decoration: none; /* remove underline */
+  nav.navbar a.navbarcontact img.navbarcontactimg {
+    display: block !important;
+    height: 16px !important;
+    width: 16px !important;
+  }
+
+
 }
 
-.navbarmenu a:hover {
-  color:  #e7dedeff;; /* optional: lighter on hover */
-}
+
+
